@@ -1,21 +1,1 @@
-/*
-	Example usage:
-	pick([1,2,0,'',false,null,undefined]) // -> [1,2,0,'',false]
-	pick([1,2,3], function(val, index) { val == 1 }) // -> [1]
-*/
-var each = require('./each')
-
-module.exports = function pick(arr, fn) {
-	var result = []
-	if (!fn) { fn = falseOrTruthy }
-	each(arr, function(value, index) {
-		if (!fn(value, index)) { return }
-		result.push(value)
-	})
-	return result
-}
-
-function falseOrTruthy(arg) {
-	return !!arg || arg === false
-}
-
+filter.js
